--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-material-ui-carousel": "^3.4.2",
     "sass": "^1.62.0",
     "sharp": "^0.32.0"
   },
