--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "@next/font": "^13.3.0",
     "next": "13.3.0",
+    "next-intl": "^3.0.0-beta.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-material-ui-carousel": "^3.4.2",
     "sass": "^1.62.0",
     "sharp": "^0.32.0"
   },
